# api.yml
@@ -29,11 +29,9 @@ paths:
             properties:
               code:
                 type: string
-                summary: 微信临时登录凭证
                 description: 调用接口wx.login() 获取临时登录凭证（code）
               random:
                 type: string
-                summary: 随机码
                 description: 小程序客户端随机生成6位数字
       responses:
         200:
@@ -43,15 +41,12 @@ paths:
             properties:
               session:
                 type: string
-                summary: 登录凭证
                 description: 小程序登录凭证,对应表session.id
               is_binding:
                 type: boolean
-                summary: 是否绑定员工
                 description: openid在表employee找不到返回False,否则为True
               expire_time:
-                type: datetime
-                summary: 过期时间
+                type: string
                 description: 对应表session.expire_time
   
   /account/login:
@@ -63,6 +58,7 @@ paths:
         - APISessionHeader: []
       parameters:
         - in: body
+          name: account
           schema:
             type: object
             properties:
@@ -75,9 +71,269 @@ paths:
           description: 登录成功
         400:
           description: 登录失败
+      
+  /home:
+    get:
+      tags:
+        - home
+      summary: 监控中心
+      produces:
+        - application/json
+      responses:
+        200:
+          description: OK
+          schema:
+            type: object
+            properties:
+              employee:
+                type: object
+                properties:
+                  realname:
+                    type: string
+                  picture:
+                    type: string
+              new_company_news:
+                type: integer
+              new_industry_news:
+                type: integer
+              articles:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                    title:
+                      type: string
+                    follow_type:
+                      type: integer
+                      enum:
+                        - 1
+                        - 2
+                    follow_name:
+                      type: string
+                    time:
+                      type: string
+                    is_read:
+                      type: integer
+                    
+  /articles:
+    get:
+      tags:
+        - articlelist
+      summary: 舆情列表
+      parameters:
+        - in: query
+          name: page_index
+          type: integer
+        - in: query
+          name: follow_type
+          type: integer
+      responses:
+        200:
+          description: OK
+          schema:
+            type: object
+            properties:
+              articles:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                    title:
+                      type: string
+                    follow_type':
+                      type: integer
+                      enum:
+                        - 1
+                        - 2
+                    follow_name:
+                      type: string
+                    time:
+                      type: string
+                    is_read:
+                      type: integer
 
-
+              
   
+  /article/{id}:
+    get:
+      tags:
+        - articledetails
+      summary: 舆情详情
+      parameters:
+        - in: path
+          name: id
+          type: integer
+          required: true
+          description: Numeric ID of the user to get.
+      responses:
+        200:
+          description: OK
+          schema:
+            type: object
+            properties:
+              id:
+                type: integer
+              title:
+                type: string
+              follow_type':
+                type: integer
+              follow_name:
+                type: string
+              source:
+                type: string
+              source_url:
+                type: string
+              content:
+                type: string
+
+  /article/{id}/invalid:
+    put:
+      tags:
+        - Invalidinformation
+      summary: 无效信息
+      parameters:
+        - in: path
+          name: id
+          type: integer
+          required: true
+          description: Numeric ID of the user to get.
+      responses:
+        204:
+          description: OK
+          
+  /search:                    ##问题
+    get:
+      tags:
+        - seekhint
+      summary: 搜索提示
+      parameters:
+        - in: query
+          name: key
+          type: integer
+        - in: query
+          name: follow_type
+          type: integer
+          enum: [1,2]
+      responses:
+        200:
+          description: OK
+          schema:
+            type: object
+            properties:
+              follows:
+                type: array
+                items: 
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                    industry_name:
+                      type: string
+                    children_count:
+                      type: integer
+                    
+  /follows:
+    get:
+      tags:
+        - attentionlist
+      summary: 关注列表
+      produces:
+        - application/json
+      responses:
+        200:
+          description: OK
+          schema:
+            type: object
+            properties:
+              company:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                    company_name:
+                      type: string
+                    short_name:
+                      type: integer
+              industry:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                    industry_name:
+                      type: string
+                    children_count:
+                      type: integer
+                    
+
+  /follow:
+    delete:
+      tags:
+        - deletefollow
+      summary: 删除关注
+      parameters:
+        - in: body
+          name: deletefollow
+          schema:
+            type: object
+            properties:
+              follow_type:
+                type: integer
+                enum: [1,2]
+              id:
+                type: integer
+      responses:
+        204:
+          description: 删除成功
+    post:
+      tags:
+        - follow
+      summary: 对已有公司或行业关注
+      parameters:
+        - in: body
+          name: follow
+          schema:
+            type: object
+            properties:
+              follow_type:
+                type: integer
+                enum: [1,2]
+              id:
+                type: integer
+      responses:
+        204:
+          description: 删除成功
+          
+          
+  /newfollow:
+    post:
+      tags:
+        - newfollow
+      summary: 新的关注
+      parameters:
+        - in: body
+          name: newfollow
+          schema:
+            type: object
+            properties:
+              company_name:
+                type: string
+              short_name:
+                type: string
+      responses:
+        204:
+          description: 关注成功
+        400:
+          description: 关注失败
+
+      
 
 
 securityDefinitions:
