# yuqing_api/yuqing/v1/api/newfollow.py
@@ -1,0 +1,13 @@
+# -*- coding: utf-8 -*-
+from __future__ import absolute_import, print_function
+
+from . import ApiHandler
+from .. import schemas
+
+
+class Newfollow(ApiHandler):
+
+    def post(self):
+        print(self.json)
+
+        return None, 400, None
